[tool.poetry]
name = "mllm"
version = "0.1.38"
description = "Multimodal Large Language Models"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tenacity = "^8.2.3"
litellm = "^1.37.19"
google-generativeai = { version = "^0.6.0", optional = true }
threadmem = "^0.2.31"

[tool.poetry.extras]
gemini = ["google-generativeai"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
