[tool.poetry]
name = "mllm"
version = "0.1.57"
description = "Multimodal Large Language Models"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tenacity = "^8.2.3"
google-generativeai = { version = "^0.6.0", optional = true }
numpy = "1.26.4"
litellm = "^1.61.13"
threadmem = "^0.2.39"

[tool.poetry.extras]
gemini = ["google-generativeai"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.0"
pytest-env = "^1.1.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
